# EMF

./: .gitignore  BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CONCEPT.md  CONCEPT_EN.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
docs/: FEYNMAN_VOL2_LAYER_MAP.md  FEYNMAN_VOL2_LAYER_MAP_EN.md
em_induction/: __init__.py  contracts.py  ecosystem_bridges.py  faraday_emf.py  flux_rule_pedagogy.py  foundation.py  lumped_inductor.py  magnetic_flux.py  static_regime.py
examples/: run_em_induction_demo.py
scripts/: cleanup_generated.py  generate_signature.py  release_check.py  verify_package_identity.py  verify_signature.py
tests/: conftest.py  test_em_induction.py
